--- a/templates/default/ubuntu.preseed.erb
+++ b/templates/default/ubuntu.preseed.erb
@@ -24,12 +24,12 @@ d-i partman/confirm_write_new_label boolean true
 # Enable and set the password for the root user. By default Ubuntu does not
 # allow login with the root user. But in some provisioning cases we use it.
 d-i passwd/root-login boolean true
-d-i passwd/root-password-crypted password <%= node[:cobbler][:ks][:root_password] %>
+d-i passwd/root-password-crypted password <%= node[:cobblerd][:ks][:root_password] %>
 
 # Create a default user at the preseed operation. This is generally a cloud
 # user and we add the appropriate cloud-init script to pull the ssh keys.
 d-i passwd/make-user boolean true
-d-i passwd/user-fullname string <%= node[:cobbler][:ks][:user] %>
+d-i passwd/user-fullname string <%= node[:cobblerd][:ks][:user] %>
 d-i passwd/user-uid string 
 d-i passwd/user-password-crypted password <%= @user_pasjsword %>
 d-i passwd/username string <%= @username %>
